--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.4.2"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.46"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0"
+        classpath "org.jacoco:org.jacoco.core:0.8.8"
     }
 }
 
@@ -14,4 +15,8 @@ plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
